<resources>
    <string name="app_name">App4Autism</string>
    <string name="heart_rate_monitor">Heart Rate Monitor</string>
    <string name="pictographs">Pictographs</string>
    <string name="music_player">Music Player</string>
    <string name="drawing_board">Drawing Board</string>
    <string name="quiz">Quiz</string>
    <string name="general_lifestyle">General Lifestyle</string>
    <string name="body_parts">Body Parts</string>
    <string name="fruits">Fruits</string>
    <string name="colours">Colours</string>
    <string name="emotions">Emotions</string>
    <string name="pitch">Pitch</string>
    <string name="name">Name</string>
    <string name="speed">Speed</string>
    <string name="say_it">Say It</string>
    <string name="colour">Colour</string>
    <string name="brush">Brush</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <string name="round">Round</string>
    <string name="confirm">Confirm</string>
    <string name="square">Square</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>
    <string name="cyan">Cyan</string>
    <string name="gray">Gray</string>
    <string name="yellow">Yellow</string>
    <string name="magenta">Magenta</string>
    <string name="colour_selection">Colour Selection</string>
    <string name="green">Green</string>
    <string name="start_connection">Start Connection</string>
    <string name="textview">TextView</string>
    <string name="discover">Discover</string>
    <string name="enable_discoverable">Enable Discoverable</string>
    <string name="on_off">ON/OFF</string>
    <string name="songlist">SongList</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="replay">Replay</string>
    <string name="song_list">Song List</string>
    <string name="decibel_text">Decibel Text</string>
    <string name="results">Results</string>
    <string name="back">Back</string>
    <string name="decibel_setting">Decibel Setting</string>
    <string name="_120db_siren_threshold_of_pain">120dB - Siren, Threshold of pain</string>
    <string name="_110db_concerts">110dB - Concerts</string>
    <string name="_50db_rainfall">50dB - Rainfall</string>
    <string name="_100db_helicopter">100dB - Helicopter</string>
    <string name="_60db_normal_conservation">60dB - Normal conservation</string>
    <string name="_70db_alarm_clock">70dB - Alarm clock</string>
    <string name="_80db_screaming_baby">80dB - Screaming baby</string>
    <string name="_90db_lawn_mower">90dB - Lawn mower</string>
    <string name="_40db_library">40dB - Library</string>
    <string name="_30db_whisper">30dB - Whisper</string>
    <string name="current_tolerable_decibel">Current tolerable decibel:</string>
    <string name="new_tolerable_decibel">New tolerable decibel:</string>
</resources>
