<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DecibelSettings">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_120db_siren_threshold_of_pain"
        android:textAlignment="viewStart"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_110db_concerts"
        android:textAlignment="viewStart"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_100db_helicopter"
        android:textAlignment="viewStart"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_90db_lawn_mower"
        android:textAlignment="viewStart"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_80db_screaming_baby"
        android:textAlignment="viewStart"
        android:textColor="#FFA500" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_70db_alarm_clock"
        android:textAlignment="viewStart"
        android:textColor="#FFA500" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_60db_normal_conservation"
        android:textAlignment="viewStart"
        android:textColor="#CCCC00" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_50db_rainfall"
        android:textAlignment="viewStart"
        android:textColor="#CCCC00" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_40db_library"
        android:textAlignment="viewStart"
        android:textColor="#00FF00" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_30db_whisper"
        android:textAlignment="viewStart"
        android:textColor="#00FF00" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_tolerable_decibel"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tolerableValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="#000000"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_tolerable_decibel"
            android:textColor="#000000"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/maxdecibel"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonapply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFACD"
        android:text="Apply"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

</android.widget.LinearLayout>