<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/HRmonitor_btn"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="#FFFACD"
        android:onClick="onClickHeartRateMonitor"
        android:text="@string/heart_rate_monitor"
        app:layout_constraintStart_toStartOf="@+id/fruit_btn"
        app:layout_constraintTop_toBottomOf="@+id/fruit_btn" />

    <Button
        android:id="@+id/bodyParts_btn"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:onClick="onClickPictographs"
        android:text="@string/pictographs"
        app:layout_constraintBottom_toTopOf="@+id/colours_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#FFFACD"/>

    <Button
        android:id="@+id/fruit_btn"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="onClickMusicPlayer"
        android:text="@string/music_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotion_btn"
        android:background="#FFFACD"/>

    <Button
        android:id="@+id/colours_btn"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="onClickQuiz"
        android:text="@string/quiz"
        app:layout_constraintBottom_toTopOf="@+id/emotion_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#FFFACD"/>

    <Button
        android:id="@+id/emotion_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:onClick="onClickDrawingBoard"
        android:text="@string/drawing_board"
        app:layout_constraintEnd_toEndOf="@+id/fruit_btn"
        app:layout_constraintStart_toStartOf="@+id/fruit_btn"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFACD"/>

</android.support.constraint.ConstraintLayout>