<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drawboard"
    tools:layout_editor_absoluteY="81dp">

    <com.example.app4autism.FingerPainterView
        android:id="@+id/fingerPainterView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/color_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:onClick="onClick"
        android:text="@string/colour"
        app:layout_constraintEnd_toStartOf="@+id/brush_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fingerPainterView2" />

    <Button
        android:id="@+id/brush_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:onClick="onClickBrush"
        android:text="@string/brush"
        app:layout_constraintEnd_toStartOf="@+id/reset_button"
        app:layout_constraintStart_toEndOf="@+id/color_button"
        app:layout_constraintTop_toTopOf="@+id/fingerPainterView2" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="6dp"
        android:onClick="onClickClear"
        android:text="@string/reset"
        app:layout_constraintEnd_toStartOf="@+id/save_button"
        app:layout_constraintStart_toEndOf="@+id/brush_button"
        app:layout_constraintTop_toTopOf="@+id/fingerPainterView2" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:onClick="onClickSave"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reset_button"
        app:layout_constraintTop_toTopOf="@+id/fingerPainterView2" />

</android.support.constraint.ConstraintLayout>